fixes left align on viewer

--- a/www/src/scss/viewer/verse-slide/_verse-slide.scss
+++ b/www/src/scss/viewer/verse-slide/_verse-slide.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 20px 10px;
   text-align: center;
 }
 
@@ -31,6 +31,10 @@
 
 .slide-next-line {
   opacity: 0.5;
+}
+
+.slide-left-align {
+  text-align: left;
 }
 
 // Quick Tools Styles
